2002-06-20 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/s_basic.nw: Added patch by Bryce Denney to remove \r in 
	remove_nl(...).  This was done to have clean interoperability between
	the unix and win32 ports.  I don't know if the patch is sufficient
	to cleanup component (etc...) lines.  Will have to test this for the
	next release.

	* noweb/o_attrib.nw: A few misc cleanups in various functions

	* noweb/o_attrib.nw: Added o_attrib_search_string_single to help
	support gnetlist backend fix work.  Takes an object and a complete
	attribute and returns a pointer to the object.

	* noweb/o_attrib.nw: Added a null pointer check in
	o_attrib_return_parent(...) 

2002-06-18 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/o_attrib.nw: Drastic changes to the standard attributes.
		- pin#=# has been removed
		- slot#=# has been removed
		- pinseq=# added
		- pinnumber=# added
		- slot#=# removed
		- slotdef=#:#,#,#,# added
		- A bunch of functions renamed / removed
		- A few lame hacks removed
	These changes are the first of many that deal with how libgeda handles
	pin / slot attributes

	* noweb/Makefile.am: Incremented libgeda.so version number

2002-06-09 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/u_basic.nw: Added u_basic_strip_trailing utility function

2002-05-27 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/defines.h: Added OTHER_* seperater #defines.  Mainly for
	mingw32 port.

	* configure.in: Added OTHERPATHSEP 

2002-05-23 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/libgeda.h: Removed the last reference to gdkx.h

2002-05-19 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/struct.h: Added toolbars and handleboxes rc variables

2002-05-16 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/struct.h: Added bitmap-directory rc variable 

2002-05-12 Ales Hvezda   <ahvezda@geda.seul.org>

	* acinclude.m4: Removed file from repository

	* include/pcb_struct.h: Removed obsolete file

	* include/struct.h: Added warp_cursor rc variable and a bunch of