@@ -40,10 +40,6 @@
 <<o_attrib.c : o_attrib_copy_all()>>
 <<o_attrib.c : o_attrib_reattach()>>
 <<o_attrib.c : o_attrib_set_color()>>
-#if 0 /* obsolete */
-<<o_attrib.c : o_attrib_search_name2()>>
-<<o_attrib.c : o_attrib_search_name_partial()>>
-#endif
 <<o_attrib.c : o_attrib_search_name()>>
 <<o_attrib.c : o_attrib_search_string_list()>>
 <<o_attrib.c : o_attrib_search_string_partial()>>
@@ -1094,108 +1090,6 @@ o_attrib_set_string(TOPLEVEL *w_current, char *string)
 @ %def o_attrib_set_string
 
 
-
-
-#if 0 /* obsolete */
-@section Function @code{o_attrib_search_name2()}
-
-@defun o_attrib_search_name2 list name return_found
-@end defun
-
-<<o_attrib.c : o_attrib_search_name2()>>=
-/* it is the responsibility of the caller to free the returned string */
-/* returned string is the value */
-/* counter is the nth occurance of the attribute, starts from ZERO! */
-/* zero being the first occurance */
-/* the list is the top level list... don't pass it an object_head list */
-/* unless you know what you are doing... */
-/* be sure caller free's return value */
-/* this needs a better name, but it's a special function of above which */
-/* returns the object where the attribute lives */
-char *
-o_attrib_search_name2(OBJECT *list, char *name, OBJECT **return_found) 
-{
-  OBJECT *o_current;
-  ATTRIB *a_current;
-  OBJECT *found;
-  int val;
-  char found_name[128]; /* limit hack */
-  char found_value[128];
-  char *return_string;
-
-  o_current = list;
-
-  while(o_current != NULL) {
-    if (o_current->attribs != NULL) {
-      a_current = o_current->attribs;
-
-      while(a_current != NULL) {
-        found = a_current->object;
-        if (found != NULL) {
-          if (found->type == OBJ_TEXT) {
-            val = o_attrib_get_name_value(
-                                          found->text->string, 
-                                          found_name, found_value);
-
-            if (val) {
-              if (strcmp(name, found_name) == 0) {
-                return_string = (char *) 
-                  malloc(
-                         sizeof(char)*
-                         strlen(found_value)+1);
-                strcpy(return_string, found_value);
-                if (return_found) {
-                  *return_found = found;
-                }
-                return(return_string);
-              }
-            }	
-
-#if DEBUG 
-            printf("0 _%s_\n", found->text->string);
-            printf("1 _%s_\n", found_name);
-            printf("2 _%s_\n", found_value);
-#endif
-          }
-        }
-        a_current=a_current->next;
-      }	
-    }
-
-    /* search for attributes outside */
-
-    if (o_current->type == OBJ_TEXT) {
-      val = o_attrib_get_name_value(
-                                    o_current->text->string, 
-                                    found_name, found_value);
-      if (val) {
-        if (strcmp(name, found_name) == 0) {
-          return_string = (char *) 
-            malloc(
-                   sizeof(char)*
-                   strlen(found_value)+1);
-          strcpy(return_string, found_value);
-          if (return_found) {
-            *return_found = o_current;
-            return(return_string);
-          }
-        }
-      }	
-    }
-
-    o_current=o_current->next;
-  }
-
-  if (return_found) {
-    *return_found = o_current;
-  }
-
-  return (NULL);
-} 
-
-@ %def o_attrib_search_name2
-#endif
-
 @section Function @code{o_attrib_search_name()}
 
 @defun o_attrib_search_name list name counter
@@ -1341,114 +1235,6 @@ o_attrib_search_string_list(OBJECT *list, char *string)
 } 
 
 @ %def o_attrib_search_string_list
-
-
-
-#if 0 /* obsolete */
-@section Function @code{o_attrib_search_name_partial()}
-
-@defun o_attrib_search_name_partial object name counter
-@end defun
-
-<<o_attrib.c : o_attrib_search_name_partial()>>=
-/* it is the responsibility of the caller to free the returned string */
-/* returned string is the value */
-/* counter is the nth occurance of the attribute, starts from ZERO! */
-/* zero being the first occurance */
-/* be sure caller free's return value */
-char *
-o_attrib_search_name_partial(OBJECT *object, char *name, int counter) 
-{
-  OBJECT *o_current;
-  ATTRIB *a_current;
-  OBJECT *found;
-  int val;
-  int internal_counter=0;
-  char found_name[128]; /* limit hack */
-  char found_value[128];
-  char *return_string;
-
-  o_current = object;
-
-  if (o_current == NULL) {
-    return(NULL);
-  }
-
-  if (o_current->attribs != NULL) {
-    a_current = o_current->attribs;
-
-    while(a_current != NULL) {
-      found = a_current->object;
-      if (found != NULL) {
-        if (found->type == OBJ_TEXT) {
-          val = o_attrib_get_name_value(
-					found->text->string, 
-					found_name, found_value);
-
-          if (val) {
-            if (strstr(found_name, name)) {
-              if (counter != internal_counter) {
-                internal_counter++;	
-              } else {
-                /* ************************************************************* */
-                /* THIS IS A TOTAL HACK.  Ales should be *totally* ashamed of this */
-                /* This prevents gnetlist from picking up pinlabel when it wants pin */
-                /* THIS BETTER BE FIXED when pin#=# goes away */
-               if (!strcmp(name, "pin") && !isdigit(found_name[3])) {
-                 // we were looking for a pin number attribute in the
-                 // form of pin#=#, but this attribute has a non-number
-                 // after the word pin.  Ignore it.
-               } else {
-                  /* ************************************************************* */
-                  return_string = (char *) 
-                    malloc(
-                           sizeof(char)*
-                           strlen(found_value)+1);
-                  strcpy(return_string, found_value);
-                  return(return_string);
-                } 
-              }
-            }
-          }	
-
-#if DEBUG 
-          printf("0 _%s_\n", found->text->string);
-          printf("1 _%s_\n", found_name);
-          printf("2 _%s_\n", found_value);
-#endif
-        }
-      }
-      a_current=a_current->next;
-    }	
-
-    /* search for attributes outside */
-
-    if (o_current->type == OBJ_TEXT) {
-      val = o_attrib_get_name_value(
-                                    o_current->text->string, 
-                                    found_name, found_value);
-      if (val) {
-        if (strstr(found_name, name)) {
-          if (counter != internal_counter) {
-            internal_counter++;	
-          } else {
-            return_string = (char *) 
-              malloc(
-                     sizeof(char)*
-                     strlen(found_value)+1);
-            strcpy(return_string, found_value);
-            return(return_string);
-          }
-        }
-      }	
-    }
-  }
-	
-  return (NULL);
-} 
-
-@ %def o_attrib_search_name_partial
-#endif
 
 
 @section Function @code{o_attrib_search_string_partial()}
